--- a/session-6/ERPSolution/HRISWebApplication/HRISWebApplication.csproj
+++ b/session-6/ERPSolution/HRISWebApplication/HRISWebApplication.csproj
@@ -154,6 +154,7 @@
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="Setup\CompanyInformationForm.aspx" />
+    <Content Include="Setup\OfficeLocationForm.aspx" />
     <Content Include="Site.Master" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
@@ -195,6 +196,13 @@
     </Compile>
     <Compile Include="Setup\CompanyInformationForm.aspx.designer.cs">
       <DependentUpon>CompanyInformationForm.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Setup\OfficeLocationForm.aspx.cs">
+      <DependentUpon>OfficeLocationForm.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Setup\OfficeLocationForm.aspx.designer.cs">
+      <DependentUpon>OfficeLocationForm.aspx</DependentUpon>
     </Compile>
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
