--- a/session-7/ERPSolution/HRISWebApplication/HRISWebApplication.csproj
+++ b/session-7/ERPSolution/HRISWebApplication/HRISWebApplication.csproj
@@ -180,6 +180,7 @@
       <DependentUpon>Contact.aspx</DependentUpon>
     </Compile>
     <Compile Include="DataAccess\CompanyDataAccess.cs" />
+    <Compile Include="DataAccess\DepartmentDataAccess.cs" />
     <Compile Include="DataAccess\OfficeLocationDataAccess.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
